# riftle

./: .gitignore  .graphifyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PROJECT.md  README.md  REQUIREMENTS.md  ROADMAP.md  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.ts
.github/release/: README_portable.txt
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: admin-badge-visibility.md  close-error-chrome-widgetwin-1412.md  portable-icon-scope-debug.md  virtual-scroll-selection-highlight.md  window-expand-animation-imperceptible.md
.planning/debug/resolved/: phase-09-5-warning-path-dup.md  portable-mode-icon-rendering-fai.md
.planning/docs/: no-admin-installer-and-portable-build.md  release-strategy.md  remove-system-tool-allowlist.md  settings-styling.md  uwp-application-discovery.md
.planning/phases/01-project-scaffold-configuration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-data-layer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-indexer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT-retest.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-search-engine/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-launcher-window-ui/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-UAT.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-launch-actions/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-context-menu/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-settings-window/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md
.planning/phases/09-global-hotkey/: 09-01-PLAN.md  09-CONTEXT.md  09-VALIDATION.md
.planning/phases/09.1-system-tray/: 09.1-01-PLAN.md  09.1-01-SUMMARY.md  09.1-CONTEXT.md  09.1-RESEARCH.md  09.1-VALIDATION.md  09.1-VERIFICATION.md
.planning/phases/09.10-settings-with-sidebar/: 09.10-01-PLAN.md  09.10-01-SUMMARY.md  09.10-CONTEXT.md  09.10-RESEARCH.md  09.10-UAT.md  09.10-VALIDATION.md  09.10-VERIFICATION.md
docs/: DEV-SETUP.md
scripts/: tauri.mjs
src/: App.vue  Settings.vue  main.ts  settings-main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  hotkey.rs  indexer.rs  lib.rs  main.rs  paths.rs  search.rs  shortcuts.rs  store.rs  system_commands.rs  warnings.rs
src/components/: Dropdown.vue
src/styles/: tokens.css
(+127 files in other folders)
