[package]
name = "riftle"
version = "0.1.0"
description = "Riftle Launcher"
authors = ["Balazs Bohonyi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "riftle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# Official Tauri plugins — exact version pins (must match Tauri 2.10.3 minor series)
tauri-plugin-opener = "2"
tauri-plugin-store = "2.4.2"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-autostart = "2.5.1"

# Domain crates — caret ranges (stable semver, benefits from patch updates)
rusqlite = { version = "^0.31", features = ["bundled"] }
walkdir = "^2"
notify = "^6"
nucleo = "^0.5"
windows-sys = { version = "^0.52", features = [
  "Win32_UI_Shell",
  "Win32_System_Shutdown",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop"
] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
