[package]
name = "riftle"
version = "0.1.0"
description = "Riftle Launcher"
authors = ["Balazs Bohonyi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "riftle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }

# Official Tauri plugins — exact version pins (must match Tauri 2.10.3 minor series)
tauri-plugin-opener = "2"
tauri-plugin-store = "2.4.2"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-autostart = "2.5.1"

# Domain crates — caret ranges (stable semver, benefits from patch updates)
rusqlite = { version = "^0.31", features = ["bundled"] }
walkdir = "^2"
notify = "^6"
nucleo = "^0.5"
nucleo-matcher = "0.3"
windows-sys = { version = "^0.52", features = [
  "Win32_UI_Shell",
  "Win32_System_Shutdown",
  "Win32_System_Power",
  "Win32_System_RemoteDesktop",
  "Win32_Foundation",              # Required by DeleteDC, DeleteObject, DestroyIcon, GetIconInfo
  "Win32_Graphics_Gdi",           # GetIconInfo, GetDIBits, DeleteObject, CreateCompatibleDC
  "Win32_UI_WindowsAndMessaging",  # ICONINFO, DestroyIcon
  "Win32_Storage_FileSystem",      # GetFileVersionInfoW, VerQueryValueW (PE version info)
] }

# Phase 3: Indexer dependencies
notify-debouncer-mini = "0.4"
windows = { version = "0.58", features = [
  "Win32_UI_Shell",           # IShellLinkW, ShellLink, SLGP_FLAGS, SLGP_RAWPATH
  "Win32_System_Com",         # CoCreateInstance, CoInitializeEx, IPersistFile, CLSCTX_INPROC_SERVER
  "Win32_Foundation",         # HWND, MAX_PATH
  "Win32_Storage_FileSystem", # WIN32_FIND_DATAW (required by IShellLinkW::GetPath)
] }
image = { version = "^0.25", default-features = false, features = ["png"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

[dev-dependencies]
tempfile = "3"
